--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!--Codes By Mahdi Tasha-->
+<!--Codes By Abhijeet Chatterjee-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +20,7 @@
     <!--A Link Tag For When App Is Installed-->
     <link rel="manifest" href="manifest.json">
     <!--Title Of Page-->
-    <title>Y-Kart | Made By Mahdi Tasha</title>
+    <title>Y-Kart | Made By Abhijeet Chatterjee</title>
 </head>
 <body>
 
